Implement balanced pre-training dataset sampling
Updated the notebook to undersample the majority class, creating a 1:1 ratio of phishing to benign URLs for pre-training. This prevents the model from learning the majority class and improves evaluation reliability.

--- a/pre_train.ipynb
+++ b/pre_train.ipynb
@@ -11,9 +11,10 @@
         "**Key Features & Changes:**\n",
         "1.  **Live Data Sources:** Ingests data directly from the Phishing.Database project and the Tranco list, ensuring the model is trained on current threats.\n",
         "2.  **On-the-Fly Feature Extraction:** Processes raw URLs and generates lexical features directly within the notebook.\n",
-        "3.  **Lexical-Only Model:** This version is trained exclusively on lexical features that can be derived from the URL string. This is a necessary adaptation as host-based features (e.g., DNS, WHOIS) from the original dataset cannot be feasibly generated in real-time for a large, dynamic dataset.\n",
-        "4.  **Full Hybrid System:** Implements the complete AE + GCN training and evaluation pipeline using a robust cross-validation framework.\n",
-        "5.  **Thesis Evaluation:** Includes a dedicated section to evaluate the pre-trained and final models on a public test set to generate the specific metrics and confusion matrices required for the thesis."
+        "3.  **Lexical-Only Model:** This version is trained exclusively on lexical features that can be derived from the URL string.\n",
+        "4.  **Balanced Pre-training Dataset:** Implements undersampling of the majority class to create a balanced 1:1 ratio of phishing to benign URLs for pre-training, preventing the model from simply learning the majority class.\n",
+        "5.  **Full Hybrid System:** Implements the complete AE + GCN training and evaluation pipeline using a robust cross-validation framework.\n",
+        "6.  **Thesis Evaluation:** Includes a dedicated section to evaluate the pre-trained and final models on a public test set to generate the specific metrics and confusion matrices required for the thesis."
       ]
     },
     {
@@ -162,15 +163,20 @@
         "df_benign_full['label'] = 0\n",
         "print(f\"Parsed {len(df_benign_full)} benign domains from Tranco list.\")\n",
         "\n",
-        "# Sample the data to create a balanced dataset for pre-training\n",
-        "N_SAMPLES_BENIGN = 50000 # Using a large sample of benign URLs\n",
-        "df_benign_sample = df_benign_full.sample(n=N_SAMPLES_BENIGN, random_state=SEED)\n",
+        "# FIXED: Implement undersampling to create a balanced dataset for pre-training\n",
+        "n_phish = len(df_phish)\n",
+        "n_benign = len(df_benign_full)\n",
+        "sample_size = min(n_phish, n_benign)\n",
+        "print(f\"\\nBalancing dataset by sampling each class to {sample_size} URLs.\")\n",
+        "\n",
+        "df_phish_sample = df_phish.sample(n=sample_size, random_state=SEED)\n",
+        "df_benign_sample = df_benign_full.sample(n=sample_size, random_state=SEED)\n",
         "\n",
         "# Combine into a final public dataset for pre-training\n",
-        "df_public_raw = pd.concat([df_phish, df_benign_sample[['url', 'label']]], ignore_index=True)\n",
+        "df_public_raw = pd.concat([df_phish_sample, df_benign_sample[['url', 'label']]], ignore_index=True)\n",
         "df_public_raw = df_public_raw.sample(frac=1, random_state=SEED).reset_index(drop=True)\n",
         "\n",
-        "print(f\"\\nCreated a combined, shuffled dataset with {len(df_public_raw)} total URLs.\")\n",
+        "print(f\"\\nCreated a combined, balanced dataset with {len(df_public_raw)} total URLs.\")\n",
         "print(df_public_raw['label'].value_counts())"
       ]
     },
