Update model files and thresholds for phishing detection
Updated autoencoder threshold and fusion config values, replaced model and probability files for GNN and autoencoder, and clarified pre-training and fine-tuning balancing in the notebook. These changes reflect retraining and improved configuration for the phishing detection pipeline.

--- a/pre_train.ipynb
+++ b/pre_train.ipynb
@@ -12,7 +12,7 @@
         "1.  **Live Data Sources:** Ingests data directly from the Phishing.Database project and the Tranco list, ensuring the model is trained on current threats.\n",
         "2.  **On-the-Fly Feature Extraction:** Processes raw URLs and generates lexical features directly within the notebook.\n",
         "3.  **Lexical-Only Model:** This version is trained exclusively on lexical features that can be derived from the URL string.\n",
-        "4.  **Balanced Pre-training Dataset:** Implements undersampling of the majority class to create a balanced 1:1 ratio of phishing to benign URLs for pre-training, preventing the model from simply learning the majority class.\n",
+        "4.  **Balanced Pre-training & Fine-Tuning:** Implements undersampling to create a balanced 1:1 ratio of phishing to benign URLs for both the initial pre-training and the user-data fine-tuning stages.\n",
         "5.  **Full Hybrid System:** Implements the complete AE + GCN training and evaluation pipeline using a robust cross-validation framework.\n",
         "6.  **Thesis Evaluation:** Includes a dedicated section to evaluate the pre-trained and final models on a public test set to generate the specific metrics and confusion matrices required for the thesis."
       ]
