Improve report fetching and dataset balancing in training
Updated report fetching to order by timestamp and handle both 'url' and 'links' in payload. Refactored fine-tuning dataset creation to balance phishing and benign samples per fold. Updated thresholds and fusion weights in config files, and added new post mappings.

--- a/pre_train.ipynb
+++ b/pre_train.ipynb
@@ -86,6 +86,7 @@
         "# Google Cloud for data fetching\n",
         "from google.colab import files\n",
         "from google.cloud import firestore\n",
+        "from google.cloud.firestore_v1.base_query import Query\n",
         "\n",
         "# --- Reproducibility ---\n",
         "SEED = 42\n",
@@ -372,7 +373,9 @@
         "    # Fetch Reports\n",
         "    print(f\"Fetching user reports from: {REPORTS_PATH}...\")\n",
         "    try:\n",
-        "        report_docs = list(db_client.collection(REPORTS_PATH).stream())\n",
+        "        # FIXED: Order by timestamp to process in a predictable, chronological order\n",
+        "        reports_query = db_client.collection(REPORTS_PATH).order_by(\"timestamp\", direction=Query.DESCENDING)\n",
+        "        report_docs = list(reports_query.stream())\n",
         "        print(f\"Found {len(report_docs)} total user reports.\")\n",
         "    except Exception as e:\n",
         "        print(f\"❌ Error fetching reports: {e}\")\n",
@@ -393,8 +396,15 @@
         "    for doc in report_docs:\n",
         "        d = doc.to_dict()\n",
         "        payload = d.get('payload', {})\n",
+        "        # FIXED: Handle both 'url' and 'links' in payload\n",
+        "        url = payload.get('url')\n",
+        "        if not url:\n",
+        "            links = payload.get('links')\n",
+        "            if isinstance(links, list) and len(links) > 0:\n",
+        "                url = links[0]\n",
+        "        \n",
         "        report = {\n",
-        "            'url': payload.get('url'),\n",
+        "            'url': url,\n",
         "            'postId': payload.get('postId'),\n",
         "            'type': d.get('type')\n",
         "        }\n",
@@ -543,8 +553,9 @@
         "        print(f\"\\n--- Starting Fold {fold_idx + 1}/{N_SPLITS} ---\")\n",
         "\n",
         "        # 1. Split data for this fold\n",
-        "        X_train_fold, X_val_fold = X_user[train_indices], X_user[val_indices]\n",
-        "        y_train_fold, y_val_fold = y_user[train_indices], y_user[val_indices]\n",
+        "        X_train_fold_df = pd.DataFrame(X_user[train_indices], columns=LEXICAL_FEATURE_COLUMNS)\n",
+        "        y_train_fold = y_user[train_indices]\n",
+        "        X_val_fold, y_val_fold = X_user[val_indices], y_user[val_indices]\n",
         "        posts_train_fold, posts_val_fold = post_ids_user[train_indices], post_ids_user[val_indices]\n",
         "\n",
         "        # ===================================\n",
@@ -552,15 +563,20 @@
         "        # ===================================\n",
         "        \n",
         "        # 2. Create the balanced fine-tuning dataset\n",
-        "        num_user_phish = np.sum(y_train_fold == 1)\n",
-        "        if num_user_phish > 0:\n",
-        "            sample_indices = np.random.choice(len(X_public_phish), size=num_user_phish, replace=True) # Allow replacement if user phish > public phish\n",
-        "            X_public_phish_sample = X_public_phish[sample_indices]\n",
-        "            X_finetune = np.vstack([X_train_fold, X_public_phish_sample])\n",
-        "            y_finetune = np.concatenate([y_train_fold, np.ones(num_user_phish)])\n",
-        "        else:\n",
-        "            X_finetune = X_train_fold\n",
-        "            y_finetune = y_train_fold\n",
+        "        df_train_fold = pd.concat([X_train_fold_df, pd.Series(y_train_fold, name='label', index=X_train_fold_df.index)], axis=1)\n",
+        "        df_phish_train = df_train_fold[df_train_fold['label'] == 1]\n",
+        "        df_benign_train = df_train_fold[df_train_fold['label'] == 0]\n",
+        "        \n",
+        "        sample_size_fold = min(len(df_phish_train), len(df_benign_train))\n",
+        "        if sample_size_fold > 0:\n",
+        "            df_phish_train_sample = df_phish_train.sample(n=sample_size_fold, random_state=SEED)\n",
+        "            df_benign_train_sample = df_benign_train.sample(n=sample_size_fold, random_state=SEED)\n",
+        "            df_finetune_balanced = pd.concat([df_phish_train_sample, df_benign_train_sample])\n",
+        "        else: # Handle case where one class is missing\n",
+        "            df_finetune_balanced = df_train_fold\n",
+        "            \n",
+        "        X_finetune = df_finetune_balanced[LEXICAL_FEATURE_COLUMNS].values\n",
+        "        y_finetune = df_finetune_balanced['label'].values\n",
         "        \n",
         "        X_finetune_scaled = scaler.transform(X_finetune)\n",
         "        X_val_scaled = scaler.transform(X_val_fold)\n",
