Remove undersampling and update model artifacts
Pre-training pipeline now uses all available public and user-reported data, eliminating undersampling for improved learning. Updated documentation, configuration, model weights, scaler, and node mapping to reflect these changes and retrained models.

--- a/pre_train.ipynb
+++ b/pre_train.ipynb
@@ -6,13 +6,13 @@
     "id": "RyqYacJ-AzA5"
    },
    "source": [
-    "### **Robust Hybrid Phishing Detection Trainer (Live Datasets) v5**\n",
+    "### **Robust Hybrid Phishing Detection Trainer (Live Datasets) v6**\n",
     "\n",
     "This notebook implements the complete training pipeline using dynamic, real-world data sources. It downloads the latest phishing URLs from the `Phishing.Database` project and uses the Tranco Top 1 Million list for benign examples.\n",
     "\n",
     "**Key Features & Changes in this Version:**\n",
-    "1.  **Unified Feature Extraction:** Now resolves URL shorteners during training to match the live backend's behavior, eliminating a key source of data mismatch.\n",
-    "2.  **Improved Fine-Tuning Logic:** Replaced the undersampling technique with a more robust method that uses all available user data, preventing valuable reports from being discarded.\n",
+    "1.  **Full Data Utilization:** All undersampling has been removed. The model now trains on all available public and user-reported data for maximum learning.\n",
+    "2.  **Unified Feature Extraction:** Resolves URL shorteners during training to match the live backend's behavior, eliminating a key source of data mismatch.\n",
     "3.  **Live Data Sources:** Ingests data directly from the Phishing.Database project and the Tranco list, ensuring the model is trained on current threats.\n",
     "4.  **Full Hybrid System:** Implements the complete AE + GCN training and evaluation pipeline using a robust cross-validation framework."
    ]
@@ -151,8 +151,8 @@
     "id": "yHtk07y_AzA8"
    },
    "source": [
-    "## 4. Parse, Combine, and Sample Datasets 📋\n",
-    "This code reads the raw data from the downloaded files and organizes it. To ensure the model gets a fair look at both types of URLs, it creates a **balanced dataset** by taking an equal number of phishing and safe examples. This prevents the model from being biased towards one type over the other."
+    "## 4. Parse and Combine Datasets 📋\n",
+    "This code reads the raw data from the downloaded files and organizes it into a single dataset. This version uses all available data without undersampling to provide the model with the maximum amount of information for pre-training."
    ]
   },
   {
@@ -183,20 +183,11 @@
     "df_benign_full['label'] = 0\n",
     "print(f\"Parsed {len(df_benign_full)} benign domains from Tranco list.\")\n",
     "\n",
-    "# FIXED: Implement undersampling to create a balanced dataset for pre-training\n",
-    "n_phish = len(df_phish)\n",
-    "n_benign = len(df_benign_full)\n",
-    "sample_size = min(n_phish, n_benign)\n",
-    "print(f\"\\nBalancing dataset by sampling each class to {sample_size} URLs.\")\n",
-    "\n",
-    "df_phish_sample = df_phish.sample(n=sample_size, random_state=SEED)\n",
-    "df_benign_sample = df_benign_full.sample(n=sample_size, random_state=SEED)\n",
-    "\n",
-    "# Combine into a final public dataset for pre-training\n",
-    "df_public_raw = pd.concat([df_phish_sample, df_benign_sample[['url', 'label']]], ignore_index=True)\n",
+    "# CORRECTED: Combine all available public data without undersampling\n",
+    "df_public_raw = pd.concat([df_phish, df_benign_full[['url', 'label']]], ignore_index=True)\n",
     "df_public_raw = df_public_raw.sample(frac=1, random_state=SEED).reset_index(drop=True)\n",
     "\n",
-    "print(f\"\\nCreated a combined, balanced dataset with {len(df_public_raw)} total URLs.\")\n",
+    "print(f\"\\nCreated a combined dataset with {len(df_public_raw)} total URLs.\")\n",
     "print(df_public_raw['label'].value_counts())"
    ]
   },
