Unify feature extraction and update model artifacts
Feature extraction logic in pre_train.ipynb now matches the live backend, including cleaning tracking parameters and resolving URL shorteners before extracting features. Updated thresholds, fusion config, model weights, probabilities, and node mapping to reflect retraining and improved data consistency.

--- a/pre_train.ipynb
+++ b/pre_train.ipynb
@@ -6,13 +6,13 @@
     "id": "RyqYacJ-AzA5"
    },
    "source": [
-    "### **Robust Hybrid Phishing Detection Trainer (Live Datasets) v6**\n",
+    "### **Robust Hybrid Phishing Detection Trainer (Live Datasets) v7**\n",
     "\n",
     "This notebook implements the complete training pipeline using dynamic, real-world data sources. It downloads the latest phishing URLs from the `Phishing.Database` project and uses the Tranco Top 1 Million list for benign examples.\n",
     "\n",
     "**Key Features & Changes in this Version:**\n",
-    "1.  **Full Data Utilization:** All undersampling has been removed. The model now trains on all available public and user-reported data for maximum learning.\n",
-    "2.  **Unified Feature Extraction:** Resolves URL shorteners during training to match the live backend's behavior, eliminating a key source of data mismatch.\n",
+    "1.  **Fully Unified Feature Extraction:** The feature extraction logic now perfectly mirrors the live backend. It cleans tracking parameters (e.g., `fbclid`), resolves URL shorteners, and then extracts features, eliminating data mismatch.\n",
+    "2.  **Full Data Utilization:** All undersampling has been removed. The model now trains on all available public and user-reported data for maximum learning.\n",
     "3.  **Live Data Sources:** Ingests data directly from the Phishing.Database project and the Tranco list, ensuring the model is trained on current threats.\n",
     "4.  **Full Hybrid System:** Implements the complete AE + GCN training and evaluation pipeline using a robust cross-validation framework."
    ]
@@ -51,7 +51,7 @@
    },
    "source": [
     "## 2. Imports and Initial Configuration 📚\n",
-    "This cell unpacks the project's toolbox. It **imports** all the specific functions and classes from the installed libraries so they are ready to use. It also sets a **random seed**, a number that ensures if the notebook is run again, the results will be identical—making the experiment repeatable and scientific."
+    "This cell unpacks the project's toolbox. It **imports** all the specific functions and classes from the installed libraries so they are ready to use, including `urllib.parse` for cleaning URLs. It also sets a **random seed**, a number that ensures if the notebook is run again, the results will be identical."
    ]
   },
   {
@@ -77,6 +77,7 @@
     "from tqdm.notebook import tqdm\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "from urllib.parse import urlparse, urlunparse, parse_qsl, urlencode\n",
     "\n",
     "# TensorFlow for Autoencoder\n",
     "import tensorflow as tf\n",
@@ -198,7 +199,7 @@
    },
    "source": [
     "## 5. Feature Engineering and Scaling 📏\n",
-    "This is a computationally intensive step that **turns each URL into a list of numbers** a machine can understand. This version now includes logic to **resolve URL shorteners**, ensuring the features are extracted from the final destination URL, just like in the live backend. The resulting numerical features are then scaled and the scaler is saved for later use."
+    "This is a computationally intensive step that **turns each URL into a list of numbers** a machine can understand. This function is now fully unified with the live backend's logic: it first **cleans tracking parameters** (like `fbclid`), then **resolves URL shorteners**, and finally extracts the numerical features from the final, processed URL."
    ]
   },
   {
@@ -226,26 +227,43 @@
     "session = requests.Session()\n",
     "\n",
     "def get_lexical_features(url: str) -> dict:\n",
-    "    \"\"\"Extracts lexical features from a URL, including resolving shorteners.\"\"\"\n",
+    "    \"\"\"\n",
+    "    Extracts lexical features from a URL, including cleaning tracking parameters \n",
+    "    and resolving shorteners to match the backend logic.\n",
+    "    \"\"\"\n",
     "    features = {}\n",
-    "    original_url = str(url)\n",
-    "    final_url = original_url\n",
+    "    raw_url = str(url)\n",
     "    \n",
     "    try:\n",
-    "        # Logic ported from app.py to resolve shorteners\n",
+    "        # 1. NORMALIZE URL: Remove common tracking query params (logic from app.py)\n",
+    "        normalized_url = raw_url\n",
+    "        try:\n",
+    "            p = urlparse(raw_url)\n",
+    "            if p.query:\n",
+    "                q = parse_qsl(p.query, keep_blank_values=True)\n",
+    "                q_filtered = [(k, v) for k, v in q if not (k.lower() == 'fbclid' or k.lower().startswith('utm_'))]\n",
+    "                new_query = urlencode(q_filtered)\n",
+    "                p = p._replace(query=new_query)\n",
+    "                normalized_url = urlunparse(p)\n",
+    "        except Exception:\n",
+    "            normalized_url = raw_url # Fallback to original if parsing fails\n",
+    "\n",
+    "        # 2. RESOLVE SHORTENERS: Use the normalized URL for this step\n",
+    "        final_url = normalized_url\n",
     "        shorteners = {\"bit.ly\",\"tinyurl.com\",\"t.co\",\"goo.gl\",\"ow.ly\",\"is.gd\",\"cutt.ly\",\"lnkd.in\",\"buff.ly\"}\n",
-    "        ext_original = tldextract.extract(original_url)\n",
+    "        ext_original = tldextract.extract(normalized_url)\n",
     "        original_domain_suffix = f\"{ext_original.domain}.{ext_original.suffix}\"\n",
     "        is_shortened = 1 if original_domain_suffix in shorteners else 0\n",
     "        features['url_shortened'] = is_shortened\n",
     "\n",
     "        if is_shortened:\n",
     "            try:\n",
-    "                res = session.head(original_url, allow_redirects=True, timeout=2)\n",
+    "                res = session.head(normalized_url, allow_redirects=True, timeout=2)\n",
     "                final_url = res.url\n",
     "            except requests.exceptions.RequestException:\n",
-    "                final_url = original_url # Fallback to original if resolution fails\n",
+    "                final_url = normalized_url # Fallback if resolution fails\n",
     "\n",
+    "        # 3. EXTRACT FEATURES: Use the final, processed URL\n",
     "        ext = tldextract.extract(final_url)\n",
     "        domain = f\"{ext.domain}.{ext.suffix}\"\n",
     "\n",
